--- a/index.html
+++ b/index.html
@@ -12,13 +12,24 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Magichip.GitHub.io</h1>
-      <h2 class="project-tagline"></h2>
+      <h2 class="project-tagline">Tech Notes</h2>
       <a href="https://github.com/geewize/magichip.github.io" class="btn">View on GitHub</a>
       <a href="https://github.com/geewize/magichip.github.io/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/geewize/magichip.github.io/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
+      
+      
+  2016-05-12:
+  <a href = "https://docs.google.com/document/d/1hUSoLd0UJTZYbxxRz4aQMo-m4pRjGGxYi8wgSbXSgBw/pub">
+  How does content delivery network?</a><br>
+
+  2016-05-09:
+  <a href = "https://docs.google.com/document/d/1iDN0-6-AO4s42J7QMMgRcVRCeye5evoZytVzPwNEmGc/pub">
+  Accelerating neural network training on GPUs</a><br>
+
+
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
