--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
 
   <body>
   <h1>Tech notes</h1>
-
+  
+  2016-05-16:
+  <a href = "https://docs.google.com/document/d/1vWN5sbc0lX6AA8IFQBusYYUQGeapO_F_RCv37XflXlE/pub">
+  Deep learning in biomedical research </a><br>
+  
 
   2016-05-12:
   <a href = "https://docs.google.com/document/d/1hUSoLd0UJTZYbxxRz4aQMo-m4pRjGGxYi8wgSbXSgBw/pub">
-  How does content delivery network?</a><br>
+  How does content delivery network work?</a><br>
 
   2016-05-09:
   <a href = "https://docs.google.com/document/d/1iDN0-6-AO4s42J7QMMgRcVRCeye5evoZytVzPwNEmGc/pub">
